Modfiications to have site be for linkyeg.ca in terms of branding and messaging.

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <nav role="navigation">
       <div>
         <div class="nav-container">
-          <a class="logo" href="#"><img role="link" src="../img/link-sf.png" alt="San Francisco website that connects homeless and low-income residents with critical and life-saving resources"/></a>
+          <a class="logo" href="#"><img role="link" src="../img/linkyeg.png" alt="San Francisco website that connects homeless and low-income residents with critical and life-saving resources"/></a>
         </div>
       </div>
 
