--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Link-SF</title>
+    <title>linkyeg.ca</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="San Francisco website that connects homeless and low-income residents with critical and life-saving resources" />
+    <meta name="description" content="Edmonton website that connects homeless and low-income residents with critical and life-saving resources" />
     <link rel="stylesheet" href='<%= appCss %>'>
     <script>
       var config = {
@@ -30,16 +30,16 @@
     <nav role="navigation">
       <div>
         <div class="nav-container">
-          <a class="logo" href="#"><img role="link" src="../img/linkyeg.png" alt="San Francisco website that connects homeless and low-income residents with critical and life-saving resources"/></a>
+          <a class="logo" href="#"><img role="link" src="../img/linkyeg.png" alt="Edmonton website that connects homeless and low-income residents with critical and life-saving resources"/></a>
         </div>
       </div>
 
     </nav>
     <main role="main" id="linksf" aria-live="assertive" aria-atomic="true"></main>
     <footer>
-      <a title="Terms and conditions for using Link-SF" href="#/terms">Terms</a>&nbsp;&nbsp;
-      <a title="Provide feedback about Link-SF" href="#/feedback">Feedback</a>&nbsp;&nbsp;
-      <a title="More information about Link-SF" href="#/about">About</a>
+      <a title="Terms and conditions for using linkyeg.ca" href="#/terms">Terms</a>&nbsp;&nbsp;
+      <a title="Provide feedback about linkyeg.ca" href="#/feedback">Feedback</a>&nbsp;&nbsp;
+      <a title="More information about linkyeg.ca" href="#/about">About</a>
     </footer>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDdHRnaDD-_z2aNUqyxxCoRBAf6PWZjS4&sensor=true&libraries=geometry"></script>
     <script src="<%= appJs %>"></script>
